Google Applications.html

--- a/Google Applications.html
+++ b/Google Applications.html
@@ -114,5 +114,6 @@ text-align: center;
     </a>
     <h3>Pay and receive money instantly using your existing bank accounts. No more reloading mobile wallet balances or withdrawal fees. It's your money made simple.</h3>
     <br><br> 
+  <h4> <right> <a href = "#top"> Back to Top ↑ </a> </h4>
 </body> 
 </html>
